--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -8,7 +8,7 @@
   <div class="wrapper wrapper-content animated fadeInRight ibox-content">
     <form class="form-horizontal m" id="form-job-edit" th:object="${job}">
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">Job分组：</label>
+        <label class="col-sm-3 control-label is-required">分组名称：</label>
         <div class="col-sm-9">
           <p class="form-control-static">[(*{group})]</p>
         </div>
