--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -109,6 +109,7 @@
     uniqueId: "instanceId",
     expandAll: false,
     expandFirst: false,
+    showToggle: false,
     expandColumn: 1,
     pagination: true,
     viewUrl: prefix + "/tasks/{id}",
