--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -306,11 +306,11 @@
           <ul dir="auto">
             <li>浏览器访问【 <a href="http://127.0.0.1:80/" rel="nofollow">http://127.0.0.1:80/</a> 】登录管理后台，用户名/密码：<code>admin</code>/<code>admin123</code></li>
             <li>登录后在左侧菜单栏找到<code>调度管理</code>菜单，即可使用调度管理功能</li>
-            <li><strong>调度配置</strong>：作业(job)配置，包括查看、新增、修改、删除、触发、禁用等</li>
-            <li><strong>调度实例</strong>：job在某一时间点被触发执行的实例(instance)，一个实例会拆分成若干个任务(task)
+            <li><strong>作业配置</strong>：作业(job)配置，包括查看、新增、修改、删除、触发、禁用等</li>
+            <li><strong>任务实例</strong>：job在某一时间点被触发执行的实例(instance)，一个实例会拆分成若干个任务(task)
               <ul dir="auto">
-                <li>在页面上方的<code>第一个分页表格</code>是以树状(tree)方式展示调度实例，并支持下钻</li>
-                <li>鼠标向下滚动页面后看到的<code>第二个分页表格</code>是以扁平(flat)方式展示调度实例</li>
+                <li>在页面上方的<code>第一个分页表格</code>是以树状(tree)方式展示任务实例，并支持下钻</li>
+                <li>鼠标向下滚动页面后看到的<code>第二个分页表格</code>是以扁平(flat)方式展示任务实例</li>
               </ul>
             </li>
           </ul>
@@ -428,8 +428,8 @@
           <ol start="6" dir="auto">
             <li><strong>暂停与恢复</strong></li>
           </ol>
-          <p dir="auto">假如我们的这几台机器资源需要临时做其它的事情，想把当前的统计任务暂停一段时间。No problem！框架是支持<code>暂停执行中的任务</code>，只需要在管理后台的<code>调度实例</code>页面，找到该任务点击<code>暂停</code>按钮即可。在暂停时任务会接收到一个中断信号，收到中断信号时同样可以在代码中使用<code>Savepoint</code>保存当前的执行快照。</p>
-          <p dir="auto">当其它事情处理完后，我们可以在管理后台的<code>调度实例</code>页面，找到被暂停的这个任务，点击<code>恢复</code>按钮，此时任务会从上一次保存的状态中恢复继续执行。</p>
+          <p dir="auto">假如我们的这几台机器资源需要临时做其它的事情，想把当前的统计任务暂停一段时间。No problem！框架是支持<code>暂停执行中的任务</code>，只需要在管理后台的<code>任务实例</code>页面，找到该任务点击<code>暂停</code>按钮即可。在暂停时任务会接收到一个中断信号，收到中断信号时同样可以在代码中使用<code>Savepoint</code>保存当前的执行快照。</p>
+          <p dir="auto">当其它事情处理完后，我们可以在管理后台的<code>任务实例</code>页面，找到被暂停的这个任务，点击<code>恢复</code>按钮，此时任务会从上一次保存的状态中恢复继续执行。</p>
           <ol start="7" dir="auto">
             <li><strong>异常中断</strong></li>
           </ol>
