--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <th:block th:include="include :: header('调度实例')" />
+  <th:block th:include="include :: header('任务实例')" />
 </head>
 <body class="gray-bg">
 
@@ -113,8 +113,7 @@
     expandColumn: 1,
     pagination: true,
     viewUrl: prefix + "/tasks/{id}",
-    // removeUrl: prefix + "/remove/{id}",
-    modalName: "调度实例",
+    modalName: "任务实例",
     columns: [{
       field: 'selectItem',
       radio: true
@@ -344,7 +343,7 @@
 
   function job(jobId) {
     var url = ctx + 'disjob/job/detail/' + jobId;
-    $.modal.open("调度配置详情", url, null, null, null, ['关闭']);
+    $.modal.open("作业配置详情", url, null, null, null, ['关闭']);
   }
 
   function operate(instanceId, type, message) {
