--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
@@ -38,8 +38,8 @@
           align: 'center'
         },
         {
-          field: 'isWorker',
-          title: '是否Worker',
+          field: 'alsoWorker',
+          title: '是否同为Worker',
           formatter: function(value, row, index) {
             return value ? '<span class="badge badge-success">是</span>' : '<span class="badge badge-info">否</span>';
           }
