--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/job.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/job.html
@@ -38,7 +38,7 @@
         <a class="btn btn-danger multiple disabled" onclick="removeAll()" shiro:hasPermission="disjob:job:operate">
           <i class="fa fa-trash"></i> 删除
         </a>
-        <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="disjob:job:query">
+        <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="disjob:job:operate">
           <i class="fa fa-download"></i> 导出
         </a>
       </div>
