--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
@@ -9,7 +9,7 @@
   <div class="container-div">
     <div class="row">
       <div class="col-sm-12 search-collapse">
-        <form id="sched-group-form">
+        <form id="form-my-group">
           <div class="select-list">
             <ul>
               <li>
